Renamed package, create package start and integrated gui in project